- help [command]
  not new but updated and more useful
  you get now all options for a specific command
- guild break <guild name>
  Disband your guild.
- guild create <name>
  Create a guild.
- guild kick <list number> <reason>
  Kick a guild member out of the guild.
- storage desc <storage item #>
  Display storage item description.
- eq
  Lists what you are wearing in each equipment slot.
- The sell commands have been changed. The new sell commands are:

  sell <inventory item #> [<amount>]
      Put inventory items in sell list.

  sell list
     Show items in the sell list.

  sell done
     Sell everything in the sell list.

  sell cancel
     Clear the sell list.

New config options:
- partySkill: target_dist (range)
  This is the same as target_dist for attackSkillSlot.
  Only use the skill if the player is in the given range.
- partySkill: isSelfSkill (flag)
  Use this skill on yourself after checking the party conditions.
  Useful for Magnificat or Gloria.
- cachePlayerNames (flag)
    Turns player name caching on or off.

  cachePlayerNames_duration (seconds)
    Cache player names for a maximum time of (seconds). The default is
    900 seconds (15 minutes).

  cachePlayerNames_maxSize (number)
    Maximum cache size. The default is 100.

- storageAuto_keepOpen (flag)
  Set to true if you want to keep storage open after storageAuto sequence.
  Only enable this if you know what you're doing.
  (Note: You cannot use items while storage is open.)
- itemsTakeAuto_new (flag)
  Activates experimental new item taking code; might work better for
  archers who keep failing to take items.
- "s" sequence for NPC talk steps; the client sends this when you click
  "Sell" at a shop NPC.
- attackLooters (flag)
  Enables Looter attack. (Warning attacks all monsters.).
  Will only attack if item_pickup is not 0
- teleportAuto_dropTargetKS (flag)
  Teleport if Kore drops target due to kill-steal. This is a workaround